Fix for bug#9435: TIMESTAMP columns don't update